--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,10 +6,10 @@
         <div class="about_content">
             <img class="about_picture" src="../../assets/sk_pb.jpg" alt="Picture about Stefan Konrad">
            <div class="about_text">
-            <p>Hello, my name is Stefan, and I am currently 28 years old. I am currently pursuing a career as a Fullstack Developer and am very excited about the possibilities that this field offers. Prior to this, I completed an IT technician training and became certified as an AWS Cloud Practitioner, which has given me a solid foundation in the technical skills required for this career path.</p>
-            <p>In my free time, I enjoy practicing Muay Thai. It is a great way for me to stay active and challenge myself physically. Additionally, I am also an active volunteer as a rescue paramedic. Being able to make a difference in people's lives and help them during times of crisis is a truly fulfilling experience.</p>
-            <p>In terms of my personality, I would describe myself as open-minded, empathetic, social, and helpful. I enjoy meeting new people and learning about their experiences, and I am always willing to lend a hand to those who need it. I am also driven and focused on achieving my goals, both personally and professionally.</p>
-            <p>While I am proud of all that I have accomplished so far, I know that there is always room for growth and improvement. I am constantly seeking out new opportunities to learn and develop my skills, and I am excited to see where my career and personal growth will take me in the future.</p>        
+            <p>Hello, my name is Stefan, and I'm a 28-year-old Fullstack Developer with a passion for technology and innovation. I have a strong foundation in IT, having completed an IT technician training and earned certification as an AWS Cloud Practitioner. This has given me a solid understanding of the technical skills required for success in this field.</p>
+            <p>In my free time, I enjoy practicing Muay Thai as a way to stay active and challenge myself physically. I'm also an active volunteer as a rescue paramedic, which has allowed me to make a difference in people's lives during times of crisis.</p>
+            <p>My personality is characterized by openness, empathy, sociability, and helpfulness. I enjoy meeting new people and learning about their experiences, and I'm always willing to lend a hand to those in need. I'm driven and focused on achieving my goals, both personally and professionally.</p>
+            <p>While I'm proud of all that I've accomplished so far, I'm always seeking opportunities to grow and improve. I'm excited to see where my career and personal growth will take me in the future.</p>        
            </div>
        
         </div>
