--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -138,3 +138,10 @@
     font-size: 20px;
   }
   
+  @media screen and (max-width: 426px) {
+    
+    .middle p {
+        font-size: 15px;
+      }
+
+}
